--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#root {
+  /* global variables */
+
+  /* colors */
+  --background-light: #e5e5e5;
+  --background-lighter: #ffffff;
+  --background-dark: #023168;
+  --text: #333333;
+  --text-light: #82878d;
+  --border: #d8dee7;
+  --scrollbar: #c7cdd8;
+
+  /* fonts*/
+  --font-family: 'Inter';
+  --font-size: 18px;
+  --font-size-small: 16px;
+  --font-size-date: 13px;
+}
