Don't render date if exists, render date on comments

--- a/src/components/Messages/Message/Message.module.css
+++ b/src/components/Messages/Message/Message.module.css
@@ -29,6 +29,10 @@
   max-width: 100%;
 }
 
+.message_comment {
+  margin-left: 60px;
+}
+
 .message_date {
   margin-top: 16px;
   margin-bottom: 16px;
