--- a/src/components/Messages/Message/Message.module.css
+++ b/src/components/Messages/Message/Message.module.css
@@ -9,11 +9,16 @@
   display: flex;
   flex-flow: column nowrap;
   max-width: 95%;
+  margin-left: 60px;
+}
+
+.comment_container .comment_container {
+  margin-left: 60px;
 }
 
 .comment_container li:first-child:before {
   content: '';
-  background: url('../Comment/comment.png');
+  background: url('comment.png');
   position: absolute;
   top: 0px;
   left: -36px;
@@ -27,6 +32,16 @@
   padding: 0rem;
   padding-top: 24px;
   max-width: 100%;
+}
+
+.comment {
+  position: relative;
+  display: flex;
+  flex-flow: row nowrap;
+  padding: 0rem;
+  padding-top: 24px;
+  max-width: 100%;
+  margin-left: 60px;
 }
 
 .message_comment {
@@ -48,7 +63,7 @@
   margin-right: 12px;
 }
 
-.message__container {
+.message__data {
   display: flex;
   flex-flow: column nowrap;
   padding: 24px;
